update shift and prune